--- a/src/main/resources/ro/ubbcluj/map/proiectraokko4/css/style.css
+++ b/src/main/resources/ro/ubbcluj/map/proiectraokko4/css/style.css
@@ -40,3 +40,14 @@
     -fx-border-radius: 1em;
     -fx-background-radius: 1em;
 }
+
+.date-picker:editable > .arrow-button > * {
+    -fx-opacity: 0; /* Set the node in the button to be visible */
+}
+
+.date-picker > .arrow-button {
+    /*-fx-background-image: url("../images/icons8_calendar_24px.png"); !* Url of the icon *!*/
+    -fx-background-size: 60% 60%; /* Can be `cover` or `100% 100%` ect. */
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center; /* Put the icon in the center */
+}
